# harmony-regression-tests

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Harmony.ipynb  Makefile  README.md  dot_env  pyproject.toml  sshconfig
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-all-images.yml  build-regression-image.yml  build-target-image.yml  hoss-test-suite.yml  notebook-test-suite.yml  run-target-test-suite.yml  variable-subsetter-test-suite.yml
config/: README.md  services_tests_config_prod.json  services_tests_config_uat.json
harmony/: util.py
script/: build-image.sh  clean-up-docker-images.sh  deploy-from-docker.sh  image_name.sh  test-in-bamboo.sh  test.sh
terraform/: .gitignore  data.tf  harmony-user-data.tmpl  inputs.tf  main.tf  outputs.tf
test/: Dockerfile  Dockerfile.conda  Harmony.ipynb  Makefile  build-netrc.sh  notebook-entrypoint.sh  pyproject.toml  run_notebooks.sh
test/IMAGENATOR/: IMAGENATOR_Regression.ipynb  environment.yaml  utilities.py
test/asf-gdal/: GDAL_Subsetter_Regression.ipynb  environment.yaml  sit_avnir_query1.tiff  write_testfile.py
test/batchee-stitchee/: Subset-Batchee-Stitchee-Concise-Regression.ipynb  utilities.py
test/casper/: CASPER_Regression.ipynb  environment.yaml
test/filtering/: Filtering_Regression.ipynb  environment.yaml  utilities.py
test/gdal_subsetter/: GDAL_Subsetter_Regression.ipynb
test/geoloco/: Geoloco_Regression.ipynb  environment.yaml  utilities.py
test/giovanni-averaging-service/: environment.yaml  util.py  (+1 more)
(+510 files in other folders)
