[tool.poetry]
name = "harmony-regression-tests"
version = "0.1.0"
description = "Regression tests of Harmony services and collections."
authors = ["Kevin Beam <kbeam@nsidc.org>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"
pytest = "^6.1.2"
requests = "^2.25.0"
black = "^20.8b1"
flake8 = "^3.8.4"
ipytest = "^0.9.1"
papermill = "^2.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
